car racing project

--- a/css/styles.css
+++ b/css/styles.css
@@ -157,9 +157,86 @@ button {
     border-radius: 100%;
 }
 
+/* project car racing */
 
+#racetrack {
+    background: url('images/road.jpg') center left repeat-x;
+    height: 320px;
+    background: #ddd; /* because road image is not available */
+    border-right: dashed 10px white;
+    box-sizing: border-box;
+    margin: 40px 0;
+}
 
+.car {
+    display: block;
+    position: relative;
+    transform: rotate(90deg);
+    margin-left: 40px;
+}
 
+#car1 {
+    top: 30px;
+}
+
+#car2 {
+    top: 100px;
+}
+
+#raceInfoContainer {
+    width: 80%;
+    margin: 40px auto 0;
+    background: #333;
+    height: 200px;
+}
+
+#raceInfoContainer h2 {
+    color: white;
+    text-transform: uppercase;
+    border-bottom: solid 1px white;
+    padding: 20px 0;
+}
+
+.raceInfo {
+    font-size: 24px;
+    font-weight: bold;
+    color: white;
+    width: 50%;
+    float: left;
+}
+
+.raceInfo span {
+    display: block;
+    font-weight: normal;
+    font-size: 18px;
+    color: white;
+}
+
+#raceInfo1 {
+    color: #77b82f;
+}
+
+#raceInfo2 {
+    color: #b82f3e;
+}
+
+input[type="button"] {
+    background: #77b72f;
+    color: white;
+    padding: 10px 20px;
+    border: solid 1px #444;
+}
+
+input#reset {
+    background: #fc3;
+    color: #444;
+}
+
+.clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
+}
 
 
 
